# Adobe-Challenge-1A

./: .replit  CHALLENGE_README.md  Dockerfile  FILES_FOR_GITHUB.md  GITHUB_REPOSITORY_STRUCTURE.md  GITHUB_SETUP.md  README.md  app.py  approach_explanation.md  challenge1b_demo.py  challenge1b_output_schema.json  challenge1b_processor.py  challenge1b_travel_output.json  challenge_schema.json  heatmap_food_demo.json  output_schema.json  pdf_processor.py  process_challenge1b.py  process_pdfs.py  pyproject.toml  replit.md  schema_validator.py
attached_assets/: Pasted-Round-1B-Persona-Driven-Document-Intelligence-Theme-Connect-What-Matters-For-the-User-Who-Ma-1753005702452_1753005702454.txt  Pasted-You-must-build-a-solution-that-Accepts-a-PDF-file-up-to-50-pages-Extracts-o-Title--1753003224734_1753003224735.txt
challenge-1A/: README.md
challenge-1A/.streamlit/: config.toml
challenge-1A/docs/: deployment.md
challenge-1A/src/: app.py
challenge-1B/: README.md
challenge-1B/docs/: heatmap-guide.md  personas.md
challenge-1B/src/: app.py  heatmap.py  processor.py  utils.py
github-upload/: .gitignore  README.md  challenge1b_food_output.json  challenge_processor.py  heatmap_travel_demo.json  packages.txt  streamlit_requirements.txt
output/: test_document.json
