[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fitz>=0.0.1.dev2",
    "jsonschema>=4.25.0",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "pymupdf>=1.26.3",
    "streamlit>=1.47.0",
]
